# la-france-pieces-justificatives

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  pyproject.toml  streamlit_app.py
.github/workflows/: deploy.yml  main.yml
.streamlit/: config.toml
scripts/: run.py
scripts/db/: __init.py__  vote_storage.py
scripts/text_process/: gcs_export.py  gcs_export_nlp.py  gcs_import.py  gcs_import_nlp.py  gdocs_import.py
scripts/transformers/: emoji_classifier_en.py  llm_interpreter.py
